# lunar-lander-dqn-vs-ppo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: notes.md  poster-content.md
docs/demo/: index.html
docs/superpowers/plans/: 2026-07-15-lunar-lander-dqn-ppo.md
docs/superpowers/specs/: 2026-07-15-lunar-lander-dqn-ppo-design.md
notebooks/: 02_final_run.ipynb  03_analysis.ipynb
scripts/: play.py  plot_range_widening.py  plot_results_figures.py  render_demo.py  run_final_eval.py  run_tuning.py  run_tuning_ppo_v2.py
src/lunarlander/: README.md  agents.py  config.py  envs.py  evaluate.py  plots.py  stats.py  train.py  tune.py
tests/: test_agents.py  test_config.py  test_envs.py  test_evaluate.py  test_play.py  test_plots.py  test_stats.py  test_train.py  test_tune.py
