[project]
name = "rl-eu4dual"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d,toy-text]>=1.3.0",
    "imageio>=2.37.3",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "optuna>=4.9.0",
    "optuna-dashboard>=0.20.0",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "stable-baselines3[extra]>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
